added some of my information

--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
         <div id="hd">
             <div class="yui-gc">
                 <div class="yui-u first">
-                    <h1>Jonathan Doe</h1>
-                    <h2>Web Designer, Director</h2>
+                    <h1>Austen Lowder</h1>
                 </div>
 
                 <div class="yui-u">
                     <div class="contact-info">
-                        <h3><a id="pdf" href="#">Download PDF</a></h3>
-                        <h3><a href="mailto:name@yourdomain.com">name@yourdomain.com</a></h3>
-                        <h3>(313) - 867-5309</h3>
+                        <h3><a href="mailto:austen.lowder@bsu.edu">austen.lowder@bsu.edu</a></h3>
+                        <h3>(317) - 397-6308</h3>
                     </div><!--// .contact-info -->
                 </div>
             </div><!--// .yui-gc -->
@@ -40,62 +38,47 @@
 
                     <div class="yui-gf">
                         <div class="yui-u first">
-                            <h2>Profile</h2>
+                            <h2>Personal Information</h2>
                         </div>
                         <div class="yui-u">
                             <p class="enlarge">
-                                Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change.
+                                I was born and raised in Indiana. I have always loved everything about computers from hardware
+                                to software. It all started during one fateful Christmas day when my mom and dad got me a laptop
+                                since then I have been all about computers. I love them and I enjoy working with them.
                             </p>
                         </div>
                     </div><!--// .yui-gf -->
 
                     <div class="yui-gf">
                         <div class="yui-u first">
-                            <h2>Skills</h2>
-                        </div>
-                        <div class="yui-u">
-
-                            <div class="talent">
-                                <h2>Web Design</h2>
-                                <p>Assertively exploit wireless initiatives rather than synergistic core competencies.	</p>
-                            </div>
-
-                            <div class="talent">
-                                <h2>Interface Design</h2>
-                                <p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p>
-                            </div>
-
-                            <div class="talent">
-                                <h2>Project Direction</h2>
-                                <p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
-                            </div>
-                        </div>
-                    </div><!--// .yui-gf -->
-
-                    <div class="yui-gf">
-                        <div class="yui-u first">
-                            <h2>Technical</h2>
+                            <h2>Technical Skills</h2>
                         </div>
                         <div class="yui-u">
                             <ul class="talent">
-                                <li>XHTML</li>
+                                <li>HTML</li>
                                 <li>CSS</li>
+                                <li>PHP</li>
                                 <li class="last">Javascript</li>
                             </ul>
 
                             <ul class="talent">
-                                <li>Jquery</li>
-                                <li>PHP</li>
-                                <li class="last">CVS / Subversion</li>
-                            </ul>
-
-                            <ul class="talent">
-                                <li>OS X</li>
-                                <li>Windows XP/Vista</li>
-                                <li class="last">Linux</li>
+                                <li>Python</li>
+                                <li>Java</li>
+                                <li>Android Studio</li>
+                                <li class="last">C++</li>
                             </ul>
                         </div>
                     </div><!--// .yui-gf-->
+                    <div class="yui-gf last">
+                        <div class="yui-u first">
+                            <h2>Projects Completed at BSU</h2>
+                        </div>
+                        <div class="yui-u">
+                            <h2><a href="https://github.com/Austen-Dennis/First-AustenLowder-DennisBeaver">Project 1 - Wiki API</a></h2>
+                            <h3><a href="https://github.com/Austen-Dennis/Final-AustenL-DennisB">Project 2 - Mobile texting App</a></h3>
+                            <h4><a href="https://github.com/AustenLowder2002/Lowder-Coding">All my repositories</a></h4>
+                        </div>
+                    </div><!--// .yui-gf -->
 
                     <div class="yui-gf">
 
