--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                     <div class="yui-gf">
                         <div class="yui-u first">
                             <h2>Technical Skills</h2>
-                        </div>
                         <div class="yui-u">
                             <ul class="talent">
                                 <li>HTML</li>
@@ -67,6 +66,7 @@
                                 <li>Android Studio</li>
                                 <li class="last">C++</li>
                             </ul>
+                        </div>
                         </div>
                     </div><!--// .yui-gf-->
                     <div class="yui-gf last">
@@ -89,32 +89,17 @@
                         <div class="yui-u">
 
                             <div class="job">
-                                <h2>Facebook</h2>
-                                <h3>Senior Interface Designer</h3>
-                                <h4>2005-2007</h4>
-                                <p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence. </p>
+                                <h2>Moser Consulting</h2>
+                                <h3>IT consultant Intern</h3>
+                                <h4>2021-N/A</h4>
+                                <p>Helped clients with supporting and maintaining their computers and software. Directed small scale projects. Engaged in satisfactory customer service. Travelled onsite to assist and support clientele.</p>
                             </div>
 
                             <div class="job">
-                                <h2>Apple Inc.</h2>
-                                <h3>Senior Interface Designer</h3>
-                                <h4>2005-2007</h4>
-                                <p>Progressively reconceptualize multifunctional "outside the box" thinking through inexpensive methods of empowerment. Compellingly morph extensive niche markets with mission-critical ideas. Phosfluorescently deliver bricks-and-clicks strategic theme areas rather than scalable benefits. </p>
-                            </div>
-
-                            <div class="job">
-                                <h2>Microsoft</h2>
-                                <h3>Principal and Creative Lead</h3>
-                                <h4>2004-2005</h4>
-                                <p>Intrinsicly transform flexible manufactured products without excellent intellectual capital. Energistically evisculate orthogonal architectures through covalent action items. Assertively incentivize sticky platforms without synergistic materials. </p>
-                            </div>
-
-
-                            <div class="job last">
-                                <h2>International Business Machines (IBM)</h2>
-                                <h3>Lead Web Designer</h3>
-                                <h4>2001-2004</h4>
-                                <p>Globally re-engineer cross-media schemas through viral methods of empowerment. Proactively grow long-term high-impact human capital and highly efficient innovation. Intrinsicly iterate excellent e-tailers with timely e-markets.</p>
+                                <h2>TA for Java and Object-Oriented Programming</h2>
+                                <h3>Teaching Assistant</h3>
+                                <h4>2022-2023</h4>
+                                <p>Assisted the Professor and students with projects and clean code ethnics. Provided resources and help documentation along with my own information. </p>
                             </div>
 
                         </div><!--// .yui-u -->
@@ -126,18 +111,36 @@
                             <h2>Education</h2>
                         </div>
                         <div class="yui-u">
-                            <h2>Indiana University - Bloomington, Indiana</h2>
-                            <h3>Dual Major, Economics and English &mdash; <strong>4.0 GPA</strong> </h3>
+                            <h2>Carroll Jr-Sr High School - Flora, Indiana</h2>
+                        </div>
+                        <div class="yui-u">
+                            <h2>Ball State University - Muncie, Indiana</h2>
+                            <h3>Computer Science Major &mdash; <strong>3.8 GPA</strong> </h3>
                         </div>
                     </div><!--// .yui-gf -->
-
-
+                    <div class="yui-gf last">
+                        <div class="yui-u first">
+                            <h2>Volunteering</h2>
+                        </div>
+                        <div class="yui-u">
+                            <h2>Habitat For Humanity</h2>
+                            <p>Helped build a home for someone, tasks included hammering and lifting.</p>
+                        </div>
+                    </div><!--// .yui-gf -->
+                    <div class="yui-gf last">
+                        <div class="yui-u first">
+                            <h2>Hobbies</h2>
+                            <p>My hobbies include but are not limited to, reading, learning and playing video games. I tend to play
+                            more triple A games like Baldurs gate, and Starfield. For the reading I tend to learn towards fantasy books and authors like
+                            Sarah J Maas and Steven King</p>
+                        </div>
+                    </div><!--// .yui-gf -->
                 </div><!--// .yui-b -->
             </div><!--// yui-main -->
         </div><!--// bd -->
 
         <div id="ft">
-            <p>Jonathan Doe &mdash; <a href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash; (313) - 867-5309</p>
+            <p>Austen Lowder &mdash; <a href="mailto:austen.lowder@bsu.edu">austen.lowder@bsu.edu</a> &mdash; (317) - 397-6308</p>
         </div><!--// footer -->
 
     </div><!-- // inner -->
