--- a/index.html
+++ b/index.html
@@ -120,17 +120,21 @@
                         <div class="yui-u first">
                             <h2>Volunteering</h2>
                         </div>
+                        <div class="yui-u">
                         <div class="enlarge">
                             <h2>Habitat For Humanity</h2>
                             <p>Helped build a home for someone, tasks included hammering and lifting.</p>
                         </div>
+                        </div>
                     </div><!--// .yui-gf -->
                     <div class="yui-gf last">
+                        <div class="yui-u">
                         <div class="enlarge">
                             <h2>Hobbies</h2>
                             <p>My hobbies include but are not limited to, reading, learning and playing video games. I tend to play
                             more triple A games like Baldurs gate, and Starfield. For the reading I tend to learn towards fantasy books and authors like
                             Sarah J Maas and Steven King</p>
+                        </div>
                         </div>
                     </div><!--// .yui-gf -->
                 </div><!--// .yui-b -->
