--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                                 <li>PHP</li>
                                 <li class="last">Javascript</li>
                             </ul>
-
                             <ul class="talent">
                                 <li>Python</li>
                                 <li>Java</li>
@@ -67,7 +66,7 @@
                             </ul>
                         </div>
                     </div><!--// .yui-gf-->
-                    <div class="yui-gf last">
+                    <div class="yui-gf">
                         <div class="yui-u first">
                             <h2>Projects Completed at BSU</h2>
                         </div>
@@ -80,7 +79,7 @@
 
                     <div class="yui-gf">
 
-                        <div class="yui-u first">
+                        <div class="yui-gf">
                             <h2>Experience</h2>
                         </div><!--// .yui-u -->
 
@@ -104,7 +103,7 @@
                     </div><!--// .yui-gf -->
 
 
-                    <div class="yui-gf last">
+                    <div class="yui-gf">
                         <div class="yui-u first">
                             <h2>Education</h2>
                         </div>
@@ -116,7 +115,7 @@
                             <h3>Computer Science Major &mdash; <strong>3.8 GPA</strong> </h3>
                         </div>
                     </div><!--// .yui-gf -->
-                    <div class="yui-gf last">
+                    <div class="yui-gf">
                         <div class="yui-u first">
                             <h2>Volunteering</h2>
                         </div>
